--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "build:prod": "webpack --mode production"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.4.0",
     "@types/node": "^18.8.3",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.7.2",
     "css-loader": "^6.7.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
